overflow bug fix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,6 +5,10 @@ body {
   font-family: Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
     Helvetica Neue, sans-serif;
 }
+body {
+  overflow-x: hidden;
+}
+
 
 
 * {
